--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "css-loader": "5.0.1",
     "eslint": "7.13.0",
     "eslint-config-htmlacademy": "3.0.0",
-    "nanoid": "3.1.22",
     "style-loader": "2.0.0",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
@@ -28,6 +27,7 @@
     "chartjs-plugin-datalabels": "0.7.0",
     "dayjs": "1.9.5",
     "flatpickr": "4.6.6",
-    "he": "1.2.0"
+    "he": "1.2.0",
+    "random-id": "1.0.4"
   }
 }
